@@ -685,56 +685,60 @@ print (t)\
 
 # database tag configuration
 %_dbi_tags                      %{expand:%%{_dbi_tags_%{_dbapi_used}}}
-%_dbi_tags_3                    Packages:Name:Basenames:Group:Requirename:Providename:Conflictname:Triggername:Dirnames:Requireversion:Provideversion:Installtid:Sigmd5:Sha1header:Filedigests:Pubkeys:Packagecolor:Nvra:Sourcepkgid
-%_dbi_tags_4                    Packages:Name:Basenames:Group:Requirename:Providename:Conflictname:Triggername:Dirnames:Requireversion:Provideversion:Installtid:Sigmd5:Sha1header:Filedigests:Pubkeys:Packagecolor:Nvra:Sourcepkgid
+%_dbi_tags_3                    Packages:Name:Basenames:Group:Providename:Requirename:Conflictname:Obsoletename:Triggername:Dirnames:Requireversion:Provideversion:Installtid:Sigmd5:Sha1header:Filedigests:Pubkeys:Packagecolor:Nvra:Sourcepkgid:Filepaths
+%_dbi_tags_4                    Packages:Name:Basenames:Group:Providename:Requirename:Conflictname:Obsoletename:Triggername:Dirnames:Requireversion:Provideversion:Installtid:Sigmd5:Sha1header:Filedigests:Pubkeys:Packagecolor:Nvra:Sourcepkgid:Filepaths
 
 # database configuration: Berkeley-DB [dbapi 3 hooks]
 %_dbi_config_3                  %{_dbi_btconfig}
-%_dbi_config_3_Dirnames         %{_dbi_btconfig}
-%_dbi_config_3_Requireversion   %{_dbi_btconfig}
-%_dbi_config_3_Provideversion   %{_dbi_btconfig}
-%_dbi_config_3_Installtid       %{_dbi_btconfig}
-%_dbi_config_3_Removetid        %{_dbi_btconfig}
 %_dbi_config_3_Basenames        %{_dbi_btconfig}
 %_dbi_config_3_Conflictname     %{_dbi_btconfig}
+%_dbi_config_3_Dirnames         %{_dbi_btconfig}
 %_dbi_config_3_Filedigests      %{_dbi_htconfig}
+%_dbi_config_3_Filepaths	%{_dbi_btconfig}
 %_dbi_config_3_Group            %{_dbi_btconfig}
+%_dbi_config_3_Installtid       %{_dbi_btconfig}
 %_dbi_config_3_Name             %{_dbi_btconfig}
+%_dbi_config_3_Nvra             %{_dbi_btconfig} noload
+%_dbi_config_3_Obsoletename     %{_dbi_btconfig}
 %_dbi_config_3_Packagecolor     %{_dbi_htconfig}
 %_dbi_config_3_Providename      %{_dbi_btconfig}
+%_dbi_config_3_Provideversion   %{_dbi_btconfig}
 %_dbi_config_3_Pubkeys          %{_dbi_htconfig}
+%_dbi_config_3_Removetid        %{_dbi_btconfig}
 %_dbi_config_3_Requirename      %{_dbi_btconfig}
+%_dbi_config_3_Requireversion   %{_dbi_btconfig}
 %_dbi_config_3_Sha1header       %{_dbi_htconfig}
 %_dbi_config_3_Sigmd5           %{_dbi_htconfig}
+%_dbi_config_3_Sourcepkgid      %{_dbi_btconfig}
 %_dbi_config_3_Triggername      %{_dbi_btconfig}
 %_dbi_config_3_Packages         %{_dbi_btconfig} lockdbfd
 %_dbi_config_3_Depends          %{_dbi_btconfig} temporary private
-%_dbi_config_3_Nvra             %{_dbi_btconfig} noload
-%_dbi_config_3_Sourcepkgid      %{_dbi_btconfig}
 
 # database configuration: SQLite [dbapi 4 hooks]
 %_dbi_config_4                  %{_dbi_sqlconfig}
-%_dbi_config_4_Dirnames         %{_dbi_sqlconfig}
-%_dbi_config_4_Requireversion   %{_dbi_sqlconfig}
-%_dbi_config_4_Provideversion   %{_dbi_sqlconfig}
-%_dbi_config_4_Installtid       %{_dbi_sqlconfig}
-%_dbi_config_4_Removetid        %{_dbi_sqlconfig}
 %_dbi_config_4_Basenames        %{_dbi_sqlconfig}
 %_dbi_config_4_Conflictname     %{_dbi_sqlconfig}
+%_dbi_config_4_Dirnames         %{_dbi_sqlconfig}
 %_dbi_config_4_Filedigests      %{_dbi_sqlconfig}
+%_dbi_config_4_Filepaths	%{_dbi_sqlconfig}
 %_dbi_config_4_Group            %{_dbi_sqlconfig}
+%_dbi_config_4_Installtid       %{_dbi_sqlconfig}
 %_dbi_config_4_Name             %{_dbi_sqlconfig}
+%_dbi_config_4_Nvra             %{_dbi_sqlconfig} noload
+%_dbi_config_4_Obsoletename     %{_dbi_sqlconfig}
 %_dbi_config_4_Packagecolor     %{_dbi_sqlconfig}
 %_dbi_config_4_Providename      %{_dbi_sqlconfig}
+%_dbi_config_4_Provideversion   %{_dbi_sqlconfig}
 %_dbi_config_4_Pubkeys          %{_dbi_sqlconfig}
+%_dbi_config_4_Removetid        %{_dbi_sqlconfig}
 %_dbi_config_4_Requirename      %{_dbi_sqlconfig}
+%_dbi_config_4_Requireversion   %{_dbi_sqlconfig}
 %_dbi_config_4_Sha1header       %{_dbi_sqlconfig}
 %_dbi_config_4_Sigmd5           %{_dbi_sqlconfig}
+%_dbi_config_4_Sourcepkgid      %{_dbi_sqlconfig}
 %_dbi_config_4_Triggername      %{_dbi_sqlconfig}
 %_dbi_config_4_Packages         %{_dbi_sqlconfig}
 %_dbi_config_4_Depends          %{_dbi_sqlconfig} temporary private
-%_dbi_config_4_Nvra             %{_dbi_sqlconfig} noload
-%_dbi_config_4_Sourcepkgid      %{_dbi_sqlconfig}
 
 # database configuration [code entry hooks]
 %_dbi_config                    %{expand:%%{_dbi_config_%{_dbapi_used}}}
@@ -748,6 +752,7 @@ print (t)\
 %_dbi_config_Filedigests        %{expand:%%{_dbi_config_%{_dbapi_used}_Filedigests}}
 %_dbi_config_Group              %{expand:%%{_dbi_config_%{_dbapi_used}_Group}}
 %_dbi_config_Name               %{expand:%%{_dbi_config_%{_dbapi_used}_Name}}
+%_dbi_config_Obsoletename       %{expand:%%{_dbi_config_%{_dbapi_used}_Obsoletename}}
 %_dbi_config_Packagecolor       %{expand:%%{_dbi_config_%{_dbapi_used}_Packagecolor}}
 %_dbi_config_Providename        %{expand:%%{_dbi_config_%{_dbapi_used}_Providename}}
 %_dbi_config_Pubkeys            %{expand:%%{_dbi_config_%{_dbapi_used}_Pubkeys}}
@@ -759,6 +764,7 @@ print (t)\
 %_dbi_config_Depends            %{expand:%%{_dbi_config_%{_dbapi_used}_Depends}}
 %_dbi_config_Nvra               %{expand:%%{_dbi_config_%{_dbapi_used}_Nvra}}
 %_dbi_config_Sourcepkgid        %{expand:%%{_dbi_config_%{_dbapi_used}_Sourcepkgid}}
+%_dbi_config_Filepaths		%{expand:%%{_dbi_config_%{_dbapi_used}_Filepaths}}
 
 # Database API configuration:
 #
